--- a/index.html
+++ b/index.html
@@ -171,11 +171,13 @@
                             ferramentas como Docker.
 
                             Movido pela curiosidade, busco sempre aprender e superar desafios. Vamos trocar ideias ou
-                            criar algo incrível juntos? 
+                            criar algo incrível juntos?
 
                         </p>
                         <div class="button" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                            <button>Download CV</button>
+                            <a href="./assets/KaiqueMedeirosCV.pdf" download="KaiqueMedeirosCV.pdf">
+                                <button>Download CV</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -208,7 +210,8 @@
                     </div>
                     <div class="boxes">
                         <div class="box">
-                            <div class="per" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100">JavaScript
+                            <div class="per" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100">
+                                JavaScript
                             </div>
                         </div>
                         <div class="box">
@@ -220,7 +223,8 @@
                             </div>
                         </div>
                         <div class="box">
-                            <div class="per" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="100">TypeScript
+                            <div class="per" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="100">
+                                TypeScript
                             </div>
                         </div>
                     </div>
@@ -235,47 +239,44 @@
                         Projetos</span></div>
                 <div class="boxes">
                     <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 1</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <a href="https://totalcontrol-kaique-medeiros.netlify.app" class="link-wrapper" target="_blank">
+                            <div class="icon">
+                                <i class="fas fa-file-invoice-dollar"></i>
+                            </div>
+                            <div class="topic">Total Control</div>
+                            <p>Um site construido para você controlar suas finanças! <br>
+                                (Usuário: Kaique | Senha: teste123)</p>
                     </div>
+                    </a>
                     <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 2</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <a href="https://geradordesenha-kaiquemedeiros.netlify.app" class="link-wrapper"
+                            target="_blank">
+                            <div class="icon">
+                                <i class="fas fa-key"></i>
+                            </div>
+                            <div class="topic">Password Generator</div>
+                            <p>Gerando as melhores senhas para a proteção da sua conta!
+                            </p>
                     </div>
+                    </a>
                     <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 3</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <a href="https://lading-page-kaique-medeiros.netlify.app" class="link-wrapper" target="_blank">
+                            <div class="icon">
+                                <i class="fas fa-desktop"></i>
+                            </div>
+                            <div class="topic">Landing Page Educacional</div>
+                            <p>Uma Landing page para uma escola de programação</p>
                     </div>
+                    </a>
                     <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 4</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <a href="https://kaiquemedeiroslinks.netlify.app" class="link-wrapper" target="_blank">
+                            <div class="icon">
+                                <i class="fas fa-link"></i>
+                            </div>
+                            <div class="topic">Linktree</div>
+                            <p>Todos os seus links em um só lugar. E o melhor, personalizado do seu jeito!</p>
                     </div>
-                    <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 5</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </div>
-                    <div class="box" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
-                        <div class="icon">
-                            <i class="fas fa-desktop"></i>
-                        </div>
-                        <div class="topic">Projeto 6</div>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
